--- a/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
@@ -1,52 +1,17 @@
 <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm" *ngIf="!isLoading; else loadingContainer">
-    <!-- <div class="modal-header">
-        <h4 class="modal-title">
-            <span *ngIf="!result?.id; else dialogTitleWithResult" jhiTranslate="artemisApp.result.createManual">Create manual result </span>
-            <ng-template #dialogTitleWithResult>
-                <span *ngIf="!complaint" jhiTranslate="artemisApp.result.updateManual">Update manual result</span>
-                <span
-                    *ngIf="complaint && ((complaint.complaintType === ComplaintType.COMPLAINT && isAssessor) || complaint.accepted !== undefined)"
-                    jhiTranslate="artemisApp.result.viewManual"
-                >View manual result</span
-                >
-                <span
-                    *ngIf="complaint && (complaint.complaintType !== ComplaintType.MORE_FEEDBACK || !isAssessor) && complaint.accepted === undefined"
-                    jhiTranslate="artemisApp.tutorExerciseDashboard.evaluateComplaint"
-                >Evaluate complaint
-                </span>
-            </ng-template>
-            ({{ exercise.title }})
-        </h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
-    </div>-->
     <div *ngIf="result" class="modal-body">
-        <!--<jhi-alert-error></jhi-alert-error>
+        <jhi-alert-error></jhi-alert-error>
         <jhi-alert></jhi-alert>
         <div *ngIf="isOpenForSubmission" class="alert alert-warning">
             <strong jhiTranslate="artemisApp.result.exerciseStillOpen">Exercise is still open for submissions!</strong>
-            <span jhiTranslate="artemisApp.result.studentOverride"
-            >The due date of this exercise is not reached yet. The student could override this manual result by committing a new solution.</span
-            >
+            <span jhiTranslate="artemisApp.result.studentOverride">
+                The due date of this exercise is not reached yet. The student could override this manual result by committing a new solution.
+            </span>
         </div>
         <div class="form-group" *ngIf="exercise.gradingInstructions">
             <h3 for="id" jhiTranslate="artemisApp.exercise.gradingInstructions">Grading Instructions</h3>
             <span [innerHTML]="exercise.gradingInstructions | htmlForMarkdown"></span>
-        </div> -->
-        <!--<div class="d-flex align-items-center mb-1 mt-1">
-            <jhi-programming-assessment-repo-export
-                [exerciseId]="exercise.id"
-                [singleParticipantMode]="true"
-                [participationIdList]="participation?.id"
-            ></jhi-programming-assessment-repo-export>
-            <a
-                class="ml-2"
-                href="{{ this.participation?.repositoryUrl }}"
-                target="_blank"
-                rel="noopener noreferrer"
-                jhiTranslate="artemisApp.tutorExerciseDashboard.programmingExercise.goToRepo"
-            >Go to repository</a
-            >
-        </div>-->
+        </div>
         <div class="form-group row align-items-end">
             <div class="col-md-6">
                 <h4 class="control-label" jhiTranslate="artemisApp.result.resultString">Result Text</h4>
@@ -132,7 +97,6 @@
             &nbsp;
             <a (click)="popFeedback()" jhiTranslate="artemisApp.result.deleteFeedback">Less feedback</a>
         </div>
-        <!--
         <div class="mt-3" *ngIf="complaint">
             <jhi-complaints-for-tutor-form
                 [complaint]="complaint"
@@ -140,19 +104,16 @@
                 (updateAssessmentAfterComplaint)="onUpdateAssessmentAfterComplaint($event)"
             >
             </jhi-complaints-for-tutor-form>
-        </div> -->
+        </div>
     </div>
-    <!--  <div class="modal-footer" *ngIf="!complaint">
-        <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
-            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-        </button>
+    <div class="modal-footer" *ngIf="!complaint">
         <button type="submit" [disabled]="editForm.invalid || isSaving" class="btn btn-primary" *ngIf="!result?.completionDate">
             <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
         </button>
         <button type="submit" [disabled]="editForm.invalid || isSaving" class="btn btn-danger" *ngIf="result?.completionDate && canOverride">
             <span jhiTranslate="artemisApp.assessment.button.overrideAssessment">Override Assessment</span>
         </button>
-    </div> -->
+    </div>
 </form>
 <ng-template #loadingContainer>
     <div class="d-flex justify-content-center mt-4 mb-4">
