--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise.component.html
@@ -265,11 +265,11 @@
                                     [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
                                     type="submit"
                                     *ngIf="programmingExercise.isAtLeastInstructor"
-                                    [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id, 'test-cases']"
+                                    [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id, 'grading']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.programmingExercise.manageTestCases.title">Manage Test Cases</span>
+                                    <span class="d-none d-md-inline" jhiTranslate="artemisApp.programmingExercise.configureGrading.title">Configure Grading</span>
                                 </button>
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1">
