--- a/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.scss
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.scss
@@ -56,6 +56,9 @@ Code-Editor Layout Styles
 
             .instructions-wrapper__content {
                 overflow: hidden;
+                display: flex;
+                flex-direction: column;
+                flex-basis: 100px;
             }
 
             > *:last-child {
