--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -113,7 +113,7 @@
                                 {{ (((exercise?.studentParticipations)[0]?.results)[0]?.score * exercise?.maxScore) / 100 }}
                             </ng-container>
                         </td>
-                        <td class="align.middle">
+                        <td class="align-middle">
                             {{ exercise?.maxScore }}
                         </td>
                         <td class="align.middle">
