--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -116,7 +116,7 @@
                         <td class="align-middle">
                             {{ exercise?.maxScore }}
                         </td>
-                        <td class="align.middle">
+                        <td class="align-middle">
                             <ng-container *ngIf="!!(exercise?.studentParticipations)[0].results && ((exercise?.studentParticipations)[0]?.results)[0].assessor">
                                 {{ ((exercise?.studentParticipations)[0]?.results)[0]?.assessor.name }}
                             </ng-container>
