Added averagePercentage to the exercise and exerciseGroup part of the exam scores page

--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -141,12 +141,14 @@
                     <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
                         {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }} /
                         {{ toLocaleString(exerciseGroupResult.maxPoints) }}
+                        ({{ exerciseGroupResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePercentage, 2, 2) : '-' }} %)
                     </td>
                     <td>{{ exerciseResult.title }}</td>
                     <td>{{ exerciseResult.noOfParticipantsWithFilter }} / {{ exerciseResult.totalParticipants }}</td>
                     <td>
                         {{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }} /
                         {{ toLocaleString(exerciseResult.maxPoints) }}
+                        ({{ exerciseResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseResult.averagePercentage, 2, 2) : '-' }} %)
                     </td>
                 </tr>
             </tbody>
