Restructure cell for modeling exercise

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -272,8 +272,8 @@
                             </td>
                         </ng-container>
                         <td>
-                            <div *ngIf="exercise.type === exerciseType.MODELING" jhiTranslate="{{ 'artemisApp.DiagramType.' + asModelingExercise(exercise).diagramType }}">
-                                {{ asModelingExercise(exercise).diagramType }}
+                            <div *ngIf="asModelingExercise(exercise) as modelingExercise">
+                                {{ 'artemisApp.DiagramType.' + modelingExercise.diagramType | translate }}
                             </div>
                         </td>
                         <td class="d-flex justify-content-end">
